--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -23,14 +23,25 @@
         <li class="nav-item">
           <button type="button" id="master-search" class="btn nav-link">Search</button>
         </li>
-        <div class="text-center" id="search-card" style="display: none">
-          <%# <div class="container"> %>
-          <%= form_tag searches_path, method: :get do %>
-          <%= text_field_tag :query, params[:query], placeholder:"Search anything here" %>
-          <%= submit_tag 'search' %>
-          <% end %>
-          <%# </div> %>
+
+         <!-- <div class="text-center" id="search-card" style="display: none"> 
+          <%#= form_tag searches_path, method: :get do %>
+          <%#= text_field_tag :query, params[:query], placeholder:"Search anything here" %>
+          <%#= submit_tag 'search' %>
+          <%# end %>
+         </div> -->
+
+
+         <div class="text" id="search-card" style="display: none">
+          <div class="d-flex justify-content input-master-search">
+            <div> <%= form_tag searches_path, method: :get do %>
+              <%= text_field_tag :query, params[:query], placeholder:"Search" %> </div>
+            <div> <%= submit_tag "go!" %>
+              <% end %>
+            </div>
+          </div>
         </div>
+
         <li class="nav-item dropdown">
           <% if current_user.photo.attached? %>
             <%= cl_image_tag current_user.photo.key, width: 40, height: 40, crop: :pad, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
@@ -67,15 +78,13 @@
 
 
 
-        <div class="text" id="search-card" style="display: flex">
-          <div class="d-flex justify-content-between input-master-search">
-          <%# <div class="container"> %>
-          <div> <%= form_tag searches_path, method: :get do %>
-          <%= text_field_tag :query, params[:query], placeholder:"Search" %> </div>
-          <div> <%= submit_tag "go!" %>
-          <% end %>
-          <%# </div> %>
-          </div>
+       <div class="text" id="search-card" style="display: none">
+          <div class="d-flex justify-content input-master-search">
+            <div> <%= form_tag searches_path, method: :get do %>
+              <%= text_field_tag :query, params[:query], placeholder:"Search" %> </div>
+            <div> <%= submit_tag "go!" %>
+              <% end %>
+            </div>
           </div>
         </div>
 
