--- a/app/views/themes/show.html.erb
+++ b/app/views/themes/show.html.erb
@@ -91,7 +91,12 @@
       <div> <%= comment.content%> </div>
       <br>
       <div class="d-flex justify-content-between">
-    <div><%= cl_image_tag comment.user.photo.key, width: 40, height: 40, crop: :pad, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %> <% "#{ }"%> by <%= comment.user.username %></div>
+    <div>
+    <% if comment.user.photo.attached? %>
+    <%= cl_image_tag comment.user.photo.key, width: 40, height: 40, crop: :pad, class: "avatar dropdown-toggle", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>  
+    <% end %>
+    by <%= comment.user.username %>
+    </div>
     <div><%= comment.date %></div>
      </div>
     <br>
