--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,10 +3,10 @@
   </div>
       <div class="d-inline-flex p-2"><h4 class="title"><strong>What's Kaabo?</strong></h4>
       </div>
-      <p>Kaabo means “Welcome” in Yoruba. Kaabo app, it is a place to improve imigrants access to information in Portugal...</p>
+      <p> Kaabo means “Welcome” in Yoruba. Kaabo app it is a place to improve imigrants access to relavant and useful information in Portugal. </p>
       <div class="d-inline-flex p-2"><h4 class="title"><strong>How does it work?</strong></h4>
       </div>
-      <p>Kaabo provides you clear and concrete official and community information regarding basic rights. Enter a secton below and start your journey.</p>
+      <p>Kaabo provides you clear and concrete official and community information regarding basic rights, contribution to prevent any kind of abuse towards people that can be or feel more vulnerable. Enter a section below or join the Forum to start your journey.</p>
       <div class="container background-yellow">
         <div class="d-flex flex-column">
           <div id="target"><i class="fas fa-comments fa-5x"></i>
@@ -56,7 +56,7 @@
  </div>
 
 
- 
+
 
 
 
