--- a/app/views/comments/dashboard.html.erb
+++ b/app/views/comments/dashboard.html.erb
@@ -30,8 +30,8 @@
     <% @my_bookmarks.each do |bookmark|%>
      <div class="one-bookmark pt-2 pb-2 pr-0 pl-0">
       <div class="d-flex justify-content-between">
-      <div><%= bookmark.theme.title %></div>
-      <div> <%= bookmark.theme.date %></div>
+      <div class="pr-1"><%= bookmark.theme.title %></div>
+      <div><small> <%= bookmark.theme.date %></small></div>
      </div>
        <div class="link-deco">  <% if bookmark.theme.get_bookmark_of_user(current_user) %>
          <%= link_to theme_bookmark_path(bookmark.theme, bookmark.theme.get_bookmark_of_user(current_user)), method: :delete, :query => "dashboard" do %>
@@ -46,8 +46,6 @@
 </div>
 
 
-
-
 <div>
   <h4 class="title-dash">My threads</h4>
     <div class="card-wraper">
@@ -55,8 +53,8 @@
        <% @my_themes.each do |theme|%>
         <div class="one-bookmark pt-2 pb-2 pr-0 pl-0">
              <div class="d-flex justify-content-between">
-         <div><%= theme.title %></div>
-           <div> <%= theme.date %></div>
+         <div class="pr-1"><%= theme.title %></div>
+           <div> <small> <%= theme.date %> </small> </div>
            </div>
            <div class="d-flex justify-content-between">
             <div class="link-deco" > <%= link_to "Go to threads", topic_themes_path(theme.topic, theme) %></div>
@@ -78,7 +76,6 @@
 
 
 
-
 <div>
   <h4 class="title-dash">My comments</h4>
     <div class="card-wraper">
@@ -86,8 +83,8 @@
        <% @my_comments.each do |comment|%>
         <div class="one-bookmark pt-2 pb-2 pr-0 pl-0">
           <div class="d-flex justify-content-between">
-        <div><%= comment.content %></div>
-        <div> <%= comment.date %></div>
+        <div class="pr-1"><%= comment.content %></div>
+        <div><small><%= comment.date %> </small></div>
       </div>
         <div class="d-flex justify-content-between">
            <div class="link-deco">
