search bar and articles show page button

--- a/app/assets/stylesheets/components/_buttonLogin.scss
+++ b/app/assets/stylesheets/components/_buttonLogin.scss
@@ -16,6 +16,27 @@
   border-radius: 4px;
   background-color: #FDDB3A;
   margin: 20px;
-
 }
 
+.search-input {
+  background-color: white;
+  border-radius: 20px 0 0px 20px;
+  border: none;
+  padding-right: 5px;
+  padding-left: 20px;
+  padding-top: 0;
+  line-height: 40px;
+}
+
+#search-glass {
+   background-color: white;
+   border-radius: 0 20px 20px 0px;
+   padding: 0;
+   padding-right: 20px;
+   padding-left: 2px;
+   margin: 0 0 0 -2px;
+   border: none;
+   line-height: 40px;
+   padding-top: 2.8px;
+   font-size: 1rem;
+}
