--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -25,9 +25,8 @@
         </li>
         <div class="text-center" id="search-card" style="display: none">
           <%# <div class="container"> %>
-          <%= form_tag searches_path, method: :get do %>
-          <%= text_field_tag :query, params[:query], placeholder:"Search anything here" %>
-          <%= submit_tag 'search' %>
+          <%= form_tag searches_path, method: :get, class: 'd-flex' do %>
+            <%= text_field_tag :query, params[:query], placeholder:"Search anything here", class: 'search-input'  %><%= button_tag type: 'submit', id: "search-glass", class: 'btn btn-transparent' do %><i class="fas fa-search" style="align-self: center" aria-hidden="true"></i><% end %>
           <% end %>
           <%# </div> %>
         </div>
