facebook share working

--- a/app/assets/stylesheets/components/_buttonLogin.scss
+++ b/app/assets/stylesheets/components/_buttonLogin.scss
@@ -19,3 +19,11 @@
 
 }
 
+#facebook-button {
+  background-color: #3B5998;
+  color: white !important;
+}
+
+#facebook-button a {
+  color: white;
+}
