--- a/app/views/themes/show.html.erb
+++ b/app/views/themes/show.html.erb
@@ -1,134 +1,104 @@
 <div class="container .col-xs-">
-<div class="container">
-
-
-
-<div class="form d-flex">
-<div class="d-flex justify-content-between input-master-search ">
-      <div><%= form_tag topic_theme_path, method: :get do %> </div>
-        <div class="search-box"> <%= text_field_tag :query, params[:query], placeholder: "keyword", class: 'search-input pr-0 mr-0', style: "width:60%"%>
-           <%= submit_tag 'search', class: 'search-btn'%> </div>
-            <% end %>
-   </div>
-</div>
-
-
-
-<div class="new-card-show">
-  <h4 class="theme-cat"> <%= @theme.title %> </h4>
-  <div data-type= '<%= @theme.content%>'>
-      <%= @theme.content%>
-  </div>
-  <br>
-      <div class="d-flex justify-content-between">
-      <div> by <%= @theme.user.username %></div>
-      <div><%= @theme.date %></div>
-    </div>
-
-</div>
-
-
-
-
-
-
-
- <div class="btn-blocs">
- <div>Filter by: </div>
-    <div class="d-flex justify-content-between">
-      <div class="row">
-        <%= link_to "Show all comments", topic_theme_path(reset: true), class: "btn btn-outline-secondary" %>
-        <%= link_to "Top liked", topic_theme_path(filter: 'Likes'), class: "btn btn-outline-secondary" %>
-        <%#= link_to "Today", topic_theme_path(period: 'today'), class: "btn btn-outline-secondary" %>
-        <%#= link_to "This week", topic_theme_path(period: 'week'), class: "btn btn-outline-secondary" %>
-        <%#= link_to "This month", topic_theme_path(period: 'month'), class: "btn btn-outline-secondary"%>
-        <%#= link_to "This year", topic_theme_path(period: 'year'), class: "btn btn-outline-secondary" %>
-        <%#= link_to "All time", topic_theme_path(period: 'all'), class: "btn btn-outline-secondary" %>
-     </div>
-
-      <div class="dropdown">
-          <a class="btn btn-outline-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Time
-          </a>
-
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-            <a class="dropdown-item" href="<%= topic_theme_url(period: 'today') %>"> Today</a>
-            <a class="dropdown-item" href="<%= topic_theme_url(period: 'This week') %>"> This week  </a>
-            <a class="dropdown-item" href="<%= topic_theme_url(period: 'This month') %>"> This month </a>
-            <a class="dropdown-item" href="<%= topic_theme_url(period: 'This year') %>"> This year </a>
-          </div>
+  <div class="container">
+    <div class="form d-flex">
+      <div class="d-flex justify-content-between input-master-search ">
+        <div>
+          <%= form_tag topic_theme_path, method: :get do %> 
         </div>
-
+        <div class="search-box"> <%= text_field_tag :query, params[:query], placeholder: "keyword", class: 'search-input pr-0 mr-0', style: "width:60%"%>
+          <%= submit_tag 'search', class: 'search-btn'%> 
+        </div>
+          <% end %>
+      </div>
+    </div>
+    <div class="new-card-show">
+      <h4 class="theme-cat"><%= @theme.title %></h4>
+      <div data-type= '<%= @theme.content%>'>
+        <%= @theme.content%>
+      </div>
+      <br>
+      <div class="d-flex justify-content-between">
+        <div> by <%= @theme.user.username %>
+        </div>
+        <div>
+          <%= @theme.date %>
+        </div>
+      </div>
+    </div>
+    <div class="btn-blocs">
+      <div>
+      Filter by: 
+      </div>
+      <div class="d-flex justify-content-between">
+        <div class="row">
+          <%= link_to "Show all comments", topic_theme_path(reset: true), class: "btn btn-outline-secondary" %>
+          <%= link_to "Top liked", topic_theme_path(filter: 'Likes'), class: "btn btn-outline-secondary" %>
+        </div>
+      <div class="dropdown">
+        <a class="btn btn-outline-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Time
+        </a>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+          <a class="dropdown-item" href="<%= topic_theme_url(period: 'today') %>"> Today</a>
+          <a class="dropdown-item" href="<%= topic_theme_url(period: 'This week') %>"> This week  </a>
+          <a class="dropdown-item" href="<%= topic_theme_url(period: 'This month') %>"> This month </a>
+          <a class="dropdown-item" href="<%= topic_theme_url(period: 'This year') %>"> This year </a>
+        </div>
+      </div>
     </div>
     <br>
     <% if session[:filter] || session[:period] %>
       <div> Filters selected: <strong><%= session[:filter] %> <%= session[:period] %> </strong></div>
     <% end %>
- </div>
-
-
- <div class="d-flex justify-content-between">
-<div class="link-deco"> <strong>Leave a comment</strong> <%= link_to new_theme_comment_path(@theme) do %>
-<i class="fas fa-plus-circle"></i>
-<% end %>
-</div>
-<div class="link-deco"> <%#= link_to "show all", topic_theme_path(reset: true) %> </div>
-</div>
-
-
-
-<div class="d-flex justify-content-between">
-  <div class="btn-flat-inv" id="link-color-size"> << back to <%= link_to @theme.topic.category, topic_themes_path %> </div>
-</div>
-
+  </div>
+  <div class="d-flex justify-content-between">
+    <div class="link-deco"> 
+      <strong>Leave a comment</strong> <%= link_to new_theme_comment_path(@theme) do %>
+      <i class="fas fa-plus-circle"></i>
+      <% end %>
+    </div>
+  </div>
+  <div class="d-flex justify-content-between">
+    <div class="btn-flat-inv" id="link-color-size"> << back to <%= link_to @theme.topic.category, topic_themes_path %> </div>
+  </div>
   <button type="button" class="btn btn-sm btn-fb" id="facebook-button"><i class="fab fa-facebook-f pr-1"></i><a href="https://www.facebook.com/sharer/sharer.php?u=http://kaabo.network/topics/#{@theme.topic_id}/articles/#{@article.id}" target="_blank">
     Share on Facebook</a>
   </button>
-
-
-
-
-<% @comments.each do |comment| %>
-    <div data-type= '<%= comment.content%>' class="theme-card-show">
-      <div> <%= comment.content%> </div>
-      <br>
-      <div class="d-flex justify-content-between">
-    <div>
-    <% if comment.user.photo.attached? %>
-    <%= cl_image_tag comment.user.photo.key, width: 40, height: 40, crop: :pad, class: "avatar dropdown-toggle", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>  
-    <% end %>
-    by <%= comment.user.username %>
+  <% @comments.each do |comment| %>
+      <div data-type= '<%= comment.content%>' class="theme-card-show">
+        <div>
+          <%= comment.content%>
+        </div>
+        <br>
+        <div class="d-flex justify-content-between">
+          <div>
+            <% if comment.user.photo.attached? %>
+              <%= cl_image_tag comment.user.photo.key, width: 40, height: 40, crop: :pad, class: "avatar dropdown-toggle", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>  
+            <% end %>
+            by <%= comment.user.username %>
+          </div>
+          <div>
+            <%= comment.date %>
+          </div>
+        </div>
+        <br>
+        <div>
+          <%= comment.commentupvotes.count %>
+          <% if comment.get_commentupvote_of_user(current_user) %>
+          <%= link_to commentupvote_path(comment.get_commentupvote_of_user(current_user)), method: :delete do  %>
+            <i  id="heart-like" class="fas fa-heart"></i>
+          <% end %>
+          <% else %>
+            <%= link_to comment_commentupvotes_path(comment), method: :post  do %>
+              <i id="heart-like" class="far fa-heart"></i>
+            <% end %>
+          <% end %>
+        </div>
+      </div>
+  <% end %>
+  <div class="container">
+    <div class="row">
+      <%= paginate @comments %>
     </div>
-    <div><%= comment.date %></div>
-     </div>
-    <br>
-
-<div>
-    <%= comment.commentupvotes.count %>
-    <% if comment.get_commentupvote_of_user(current_user) %>
-      <%= link_to commentupvote_path(comment.get_commentupvote_of_user(current_user)), method: :delete do  %>
-     <i  id="heart-like" class="fas fa-heart"></i>
-    <% end %>
-
-    <% else %>
-      <%= link_to comment_commentupvotes_path(comment), method: :post  do %>
-      <i id="heart-like" class="far fa-heart"></i>
-      <% end %>
-    <% end %>
-
-</div>
-
-
-
   </div>
-
-<% end %>
-
-
-<div class="container">
-  <div class="row">
-  <%= paginate @comments %>
-  </div>
-</div>
-</div>
 </div>
