--- a/app/views/themes/show.html.erb
+++ b/app/views/themes/show.html.erb
@@ -3,10 +3,10 @@
     <div class="form d-flex">
       <div class="d-flex justify-content-between input-master-search ">
         <div>
-          <%= form_tag topic_theme_path, method: :get do %> 
+          <%= form_tag topic_theme_path, method: :get do %>
         </div>
         <div class="search-box"> <%= text_field_tag :query, params[:query], placeholder: "keyword", class: 'search-input pr-0 mr-0', style: "width:60%"%>
-          <%= submit_tag 'search', class: 'search-btn'%> 
+          <%= submit_tag 'search', class: 'search-btn'%>
         </div>
           <% end %>
       </div>
@@ -27,7 +27,7 @@
     </div>
     <div class="btn-blocs">
       <div>
-      Filter by: 
+      Filter by:
       </div>
       <div class="d-flex justify-content-between">
         <div class="row">
@@ -52,14 +52,14 @@
     <% end %>
   </div>
   <div class="d-flex justify-content-between">
-    <div class="link-deco"> 
+    <div class="link-deco">
       <strong>Leave a comment</strong> <%= link_to new_theme_comment_path(@theme) do %>
       <i class="fas fa-plus-circle"></i>
       <% end %>
     </div>
   </div>
   <div class="d-flex justify-content-between">
-    <div class="btn-flat-inv" id="link-color-size"> << back to <%= link_to @theme.topic.category, topic_themes_path %> </div>
+    <div class="btn btn-warning btn-danger-text shadow-sm" id="link-color-size"> << back to <%= link_to @theme.topic.category, topic_themes_path %> </div>
   </div>
   <button type="button" class="btn btn-sm btn-fb" id="facebook-button"><i class="fab fa-facebook-f pr-1"></i><a href="https://www.facebook.com/sharer/sharer.php?u=http://kaabo.network/topics/#{@theme.topic_id}/articles/#{@article.id}" target="_blank">
     Share on Facebook</a>
@@ -73,7 +73,7 @@
         <div class="d-flex justify-content-between">
           <div>
             <% if comment.user.photo.attached? %>
-              <%= cl_image_tag comment.user.photo.key, width: 40, height: 40, crop: :pad, class: "avatar dropdown-toggle", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>  
+              <%= cl_image_tag comment.user.photo.key, width: 40, height: 40, crop: :pad, class: "avatar dropdown-toggle", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
             <% end %>
             by <%= comment.user.username %>
           </div>
