--- a/app/views/themes/index.html.erb
+++ b/app/views/themes/index.html.erb
@@ -4,15 +4,15 @@
 
 
 
-    <div class="form d-flex ">
-      <div class="d-flex justify-content-between input-master-search ">
-        <%= form_tag topic_themes_path, method: :get do %>
-      </div>
-      <div class="search-box"> <%= text_field_tag :query, params[:query], placeholder:"keyword", class: 'search-input pr-0 mr-0', style: "width:60%"%>
-        <%= submit_tag 'search', class: 'search-btn'%>
-      </div>
-        <% end %>
-    </div>
+    <div class="text-center" id="search-card" style="display: none">
+          <%# <div class="container"> %>
+          <%= form_tag searches_path, method: :get, class: 'd-flex' do %>
+            <%= text_field_tag :query, params[:query], placeholder:"Search anything here", class: 'search-input'  %><%= button_tag type: 'submit', id: "search-glass", class: 'btn btn-transparent' do %><i class="fas fa-search" style="align-self: center" aria-hidden="true"></i><% end %>
+          <% end %>
+          <%# </div> %>
+
+
+        </div>
 
 
 
@@ -110,11 +110,11 @@
       <br>
       <div class="d-flex justify-content-between">
       <% if theme.user.username.present?%>
-      <div> 
+      <div>
         <% if theme.user.photo.attached? %>
         <%= cl_image_tag theme.user.photo.key, width: 40, height: 40, crop: :pad, class: "avatar dropdown-toggle", 'aria-haspopup': true, 'aria-expanded': false %>
         <% end %>
-        by <%= theme.user.username %> 
+        by <%= theme.user.username %>
       </div>
       <% else %>
       <div> by <%= theme.user.email %> </div>
