filter colors work now

--- a/app/assets/stylesheets/pages/_themes_index.scss
+++ b/app/assets/stylesheets/pages/_themes_index.scss
@@ -56,3 +56,10 @@
 .dropdown-menu {
   min-width: 1rem;
 }
+
+.btn-flat-inv {
+  margin-top: 0;
+  margin-right: 0;
+  margin-left: 0;
+  margin-bottom: 20px;
+}
