--- a/app/views/themes/show.html.erb
+++ b/app/views/themes/show.html.erb
@@ -78,7 +78,7 @@
 
 
 <div class="d-flex justify-content-between">
-  <div class="btn-flat-inv" id="link-color-size"> << back to <%= link_to @theme.topic.category, topic_themes_path %> </div>
+  <div class="btn-flat" id="link-color-sizee"> << back to <%= link_to @theme.topic.category, topic_themes_path %> </div>
 </div>
 
 <div class="social-share-button">
