updated buttons, search bars and icons

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -44,7 +44,7 @@ p {
   margin-bottom: 5%;
 }
 
-.btn btn-warning {
+.btn .btn-warning {
   background-color: #FDDB3A;
   border-radius: 3px;
   box-shadow: 0 0 4px rgba(0,0,0,0.2) !important;
