--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -27,10 +27,10 @@
         <div class="text-center" id="search-card" style="display: none">
           <%# <div class="container"> %>
           <%= form_tag searches_path, method: :get, class: 'd-flex' do %>
-            <%= text_field_tag :query, params[:query], placeholder:"Search anything here", class: 'search-input'  %><%= button_tag type: 'submit', id: "search-glass", class: 'btn btn-transparent' do %><i class="fas fa-search" style="align-self: center" aria-hidden="true"></i><% end %>
+            <%= text_field_tag :query, params[:query], placeholder:"Search here", class: 'search-input' %><%= button_tag type: 'submit', id: "search-glass", class: 'btn btn-transparent' do %><i class="fas fa-search" style="align-self: center" aria-hidden="true"></i><% end %>
           <% end %>
           <%# </div> %>
-        
+
 
         </div>
 
@@ -70,14 +70,14 @@
 
 
 
-       <div class="text" id="search-card" style="display: none">
-          <div class="d-flex justify-content input-master-search">
-            <div> <%= form_tag searches_path, method: :get do %>
-              <%= text_field_tag :query, params[:query], placeholder:"Search" %> </div>
-            <div> <%= submit_tag "go!" %>
-              <% end %>
-            </div>
-          </div>
+       <div class="text-center" id="search-card" style="display: none">
+          <%# <div class="container"> %>
+          <%= form_tag searches_path, method: :get, class: 'd-flex' do %>
+            <%= text_field_tag :query, params[:query], placeholder:"Search here", class: 'search-input' %><%= button_tag type: 'submit', id: "search-glass", class: 'btn btn-transparent' do %><i class="fas fa-search" style="align-self: center" aria-hidden="true"></i><% end %>
+          <% end %>
+          <%# </div> %>
+
+
         </div>
 
 
