--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -10,20 +10,24 @@
         <button type="button" class="btn btn-sm btn-fb" id="facebook-button"><i class="fab fa-facebook-f pr-1"></i><a href="https://www.facebook.com/sharer/sharer.php?u=kaabo.network/topics/#{@article.topic_id}/articles/#{@article.id}" target="_blank">
           Share on Facebook
         </a></button>
-        <div class="btn-flat-inv"> Go back to <%= link_to @article.topic.category, topic_articles_path %> </div>
-          <div class="d-flex justify-content-left">
-            <%= link_to "Edit", edit_topic_article_path(@article.topic, @article) %>
-            <%= link_to "Delete", topic_article_path(@article.topic, @article), class: "ml-3",
-                method: :delete,
-                data: { confirm: "Are you sure?" } %>
+        <br>
+        <div class="btn btn-warning btn-danger-text shadow-sm"> <%= link_to "Go back to #{@article.topic.category}", topic_articles_path %> </div>
 
-          </div>
+          <div class="link-deco"> <%= link_to edit_topic_article_path(@article.topic, @article)  do %>
+                   <i class="far fa-edit pl-2 pr-4"></i>
+                   <% end %>
+                   <%= link_to topic_article_path(@article.topic, @article),
+                   method: :delete,
+                   data: { confirm: "Are you sure?" } do %>
+                   <i class="far fa-trash-alt"></i>
+                   <% end %>
+                   </div>
 
       </div>
     </div>
   <% else %>
     <div class="container_show">
-      <div id="content-wrap">       
+      <div id="content-wrap">
         <h1><%= @article.title %></h1>
         <h4><%= @article.date %></h4>
         <p><%= @article.content %></p>
