--- a/app/views/themes/index.html.erb
+++ b/app/views/themes/index.html.erb
@@ -27,7 +27,7 @@
 
   <div class="d-flex justify-content-between">
 
-    <div class="btn btn-warning btn-danger-text shadow-sm" id="link-color"> << back to <%= link_to @topic.category, topics_path %> </div>
+    <div class="btn btn-warning btn-danger-text shadow-sm" id="link-color"> << back to <%= link_to "Forum", topics_path %> </div>
 
   </div>
 
