--- a/app/views/themes/show.html.erb
+++ b/app/views/themes/show.html.erb
@@ -3,10 +3,10 @@
     <div class="form d-flex">
       <div class="d-flex justify-content-between input-master-search ">
         <div>
-          <%= form_tag topic_theme_path, method: :get do %>
+          <%= form_tag topic_theme_path, method: :get do %> 
         </div>
         <div class="search-box"> <%= text_field_tag :query, params[:query], placeholder: "keyword", class: 'search-input pr-0 mr-0', style: "width:60%"%>
-          <%= submit_tag 'search', class: 'search-btn'%>
+          <%= submit_tag 'search', class: 'search-btn'%> 
         </div>
           <% end %>
       </div>
@@ -25,123 +25,29 @@
         </div>
       </div>
     </div>
-    <div class="btn-blocs">
-      <div>
-      Filter by:
-      </div>
-      <div class="d-flex justify-content-between">
-        <div class="row">
-          <%= link_to "Show all comments", topic_theme_path(reset: true), class: "btn btn-outline-secondary" %>
-          <%= link_to "Top liked", topic_theme_path(filter: 'Likes'), class: "btn btn-outline-secondary" %>
-        </div>
-      <div class="dropdown">
-        <a class="btn btn-outline-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Time
-        </a>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-          <a class="dropdown-item" href="<%= topic_theme_url(period: 'today') %>"> Today</a>
-          <a class="dropdown-item" href="<%= topic_theme_url(period: 'This week') %>"> This week  </a>
-          <a class="dropdown-item" href="<%= topic_theme_url(period: 'This month') %>"> This month </a>
-          <a class="dropdown-item" href="<%= topic_theme_url(period: 'This year') %>"> This year </a>
-        </div>
-      </div>
+
+    <div class="btn-blocs" id="showfilters">
+      <%= render "showfilters" %>
     </div>
-    <br>
-    <% if session[:filter] || session[:period] %>
-      <div> Filters selected: <strong><%= session[:filter] %> <%= session[:period] %> </strong></div>
-    <% end %>
 
- </div>
-
-
- <div class="d-flex justify-content-between">
-<div class="link-deco"> <strong>Leave a comment</strong> <%= link_to new_theme_comment_path(@theme) do %>
-<i class="fas fa-plus-circle"></i>
-<% end %>
-</div>
-<div class="link-deco"> <%#= link_to "show all", topic_theme_path(reset: true) %> </div>
-</div>
-
-
-
-<div class="d-flex justify-content-between">
-  <div class="btn-flat" id="link-color-sizee"> << back to <%= link_to @theme.topic.category, topic_themes_path %> </div>
-</div>
-
-<div class="social-share-button">
-  <div class="fb-share-button" data-href="http://kaabo.network/topics/#{@theme.topic_id}/articles/#{@article.id}" data-layout="button_count" data-size="small"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fkaabo.network%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Compartilhar</a></div>
-</div>
-
-
-
-
-<% @comments.each do |comment| %>
-    <div data-type= '<%= comment.content%>' class="theme-card-show">
-      <div> <%= comment.content%> </div>
-      <br>
-      <div class="d-flex justify-content-between">
-    <div>
-    <% if comment.user.photo.attached? %>
-    <%= cl_image_tag comment.user.photo.key, width: 40, height: 40, crop: :pad, class: "avatar dropdown-toggle", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>  
-    <% end %>
-    by <%= comment.user.username %>
-    </div>
-    <div><%= comment.date %></div>
-     </div>
-    <br>
-
-<div>
-    <%= comment.commentupvotes.count %>
-    <% if comment.get_commentupvote_of_user(current_user) %>
-      <%= link_to commentupvote_path(comment.get_commentupvote_of_user(current_user)), method: :delete do  %>
-     <i  id="heart-like" class="fas fa-heart"></i>
-    <% end %>
-
-    <% else %>
-      <%= link_to comment_commentupvotes_path(comment), method: :post  do %>
-      <i id="heart-like" class="far fa-heart"></i>
-
+  <div class="d-flex justify-content-between">
+    <div class="link-deco"> 
+      <strong>Leave a comment</strong> <%= link_to new_theme_comment_path(@theme) do %>
+      <i class="fas fa-plus-circle"></i>
       <% end %>
     </div>
   </div>
   <div class="d-flex justify-content-between">
-    <div class="btn btn-warning btn-danger-text shadow-sm" id="link-color-size"> << back to <%= link_to @theme.topic.category, topic_themes_path %> </div>
+    <div class="btn-flat-inv" id="link-color-size"> << back to <%= link_to @theme.topic.category, topic_themes_path %> </div>
   </div>
   <button type="button" class="btn btn-sm btn-fb" id="facebook-button"><i class="fab fa-facebook-f pr-1"></i><a href="https://www.facebook.com/sharer/sharer.php?u=http://kaabo.network/topics/#{@theme.topic_id}/articles/#{@article.id}" target="_blank">
     Share on Facebook</a>
   </button>
-  <% @comments.each do |comment| %>
-      <div data-type= '<%= comment.content%>' class="theme-card-show">
-        <div>
-          <%= comment.content%>
-        </div>
-        <br>
-        <div class="d-flex justify-content-between">
-          <div>
-            <% if comment.user.photo.attached? %>
-              <%= cl_image_tag comment.user.photo.key, width: 40, height: 40, crop: :pad, class: "avatar dropdown-toggle", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-            <% end %>
-            by <%= comment.user.username %>
-          </div>
-          <div>
-            <%= comment.date %>
-          </div>
-        </div>
-        <br>
-        <div>
-          <%= comment.commentupvotes.count %>
-          <% if comment.get_commentupvote_of_user(current_user) %>
-          <%= link_to commentupvote_path(comment.get_commentupvote_of_user(current_user)), method: :delete do  %>
-            <i  id="heart-like" class="fas fa-heart"></i>
-          <% end %>
-          <% else %>
-            <%= link_to comment_commentupvotes_path(comment), method: :post  do %>
-              <i id="heart-like" class="far fa-heart"></i>
-            <% end %>
-          <% end %>
-        </div>
-      </div>
-  <% end %>
+
+<div id="showthemes">
+  <%= render "showlisting" %>
+<div>
+
   <div class="container">
     <div class="row">
       <%= paginate @comments %>
