--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,16 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
 
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
+
+
+    <link rel="alternate" hreflang="en" href="http://www.kaabo.network">
+    <link rel="alternate" hreflang="zh" href="http://zh.kaabo.network">
+    <script type="text/javascript" src="https://cdn.weglot.com/weglot.min.js"></script>
+    <script>
+        Weglot.initialize({
+            api_key: 'wg_1374fd170b7600f8d35fc15049aeeeb69'
+        });
+    </script>
   </head>
 
 
