--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -44,7 +44,7 @@
       <div class="d-inline-flex p-2"><h4 class="title"><strong>Highlights</strong></h4></div>
       <div class="container">
         <h4 class="highlights"><strong>Education</strong></h4>
-        <h5 class="highlights">SCOLARSHIPS 20/21</h5>
+        <h5 class="highlights">SCHOLARSHIPS 20/21</h5>
         <p class="highlights">Scholar year is about to start. Imigrants can also apply to scholarship and access other social support services.</p>
       </div>
       <div class="container">
