--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -15,7 +15,6 @@
 #search-card {
   height: auto;
   padding: 7px 50px 7px;
-
 }
 
 .navbar-nav .btn {
@@ -25,9 +24,12 @@
 .input-master-search {
   max-width: 100%;
   border-radius: 5px;
-
 }
 
 #query {
   width: 100%;
+}
+
+.navbar-toggler:focus {
+  outline: none;
 }
