--- a/app/views/themes/index.html.erb
+++ b/app/views/themes/index.html.erb
@@ -4,9 +4,9 @@
 
 
 
-     <div class="text-center" id="search-card">
+     <div class="text-center">
           <%# <div class="container"> %>
-          <%= form_tag searches_path, method: :get, class: 'd-flex' do %>
+          <%= form_tag topic_themes_path, method: :get, class: 'd-flex' do %>
             <%= text_field_tag :query, params[:query], placeholder:"Search here", class: 'search-input', style: "background-color:#F6F4E6" %><%= button_tag type: 'submit', id: "search-glass", class: 'btn btn-transparent', style: "background-color:#F6F4E6" do %><i class="fas fa-search" style="align-self: center" aria-hidden="true"></i><% end %>
           <% end %>
           <%# </div> %>
@@ -23,7 +23,7 @@
       <i class="fas fa-plus-circle"></i>
 
       <% end %>
-       </div>
+     </div>
 
   <div class="d-flex justify-content-between">
 
