--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,22 +1,33 @@
 <div class="container">
-  <div class="d-flex justify-content-between">
+  <!-- <div class="d-flex justify-content-between">
     <div class="form d-flex" style="width:100%">
-      <%= form_tag users_path, method: :get do %>
-        <%= text_field_tag :query, params[:query], placeholder:"keyword", class: 'search-input pr-0 mr-0', style: "width:50%"%>
-        <%= submit_tag 'search', class: 'search-btn'%>
-      <% end %>
+      <%#= form_tag users_path, method: :get do %>
+        <%#= text_field_tag :query, params[:query], placeholder:"keyword", class: 'search-input pr-0 mr-0', style: "width:50%"%>
+        <%#= submit_tag 'search', class: 'search-btn'%>
+      <%# end %>
     </div>
+  </div>   -->
+
+  <div class="text-center">
+    <%= form_tag users_path, method: :get, class: 'd-flex' do %> <%=
+    text_field_tag :query, params[:query], placeholder:"Search", class:
+    'search-input', style: "background-color:#F6F4E6" %><%= button_tag type:
+    'submit', id: "search-glass", class: 'btn btn-transparent', style:
+    "background-color:#F6F4E6" do %><i
+      class="fas fa-search"
+      style="align-self: center"
+      aria-hidden="true"
+    ></i
+    ><% end %> <% end %>
   </div>
 
-    <% @users.each do |user| %>
-    <div style="margin-top:30px; margin-bottom: 30px;">
-      <div> User: <%= user.username %> </div>
-      <div> E-mail: <%= user.email %> </div>
-      <div> Admin: <%= user.admin %> </div>
-      <%= simple_form_for(user) do |f| %>
-          <%= f.input :admin %>
-          <%= f.submit %>
-      <% end %>
-    </div>
+  <% @users.each do |user| %>
+  <div style="margin-top: 30px; margin-bottom: 30px">
+    <div>User: <%= user.username %></div>
+    <div>E-mail: <%= user.email %></div>
+    <div>Admin: <%= user.admin %></div>
+    <%= simple_form_for(user) do |f| %> <%= f.input :admin %> <%= f.submit %> <%
+    end %>
+  </div>
   <% end %>
 </div>
