--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -60,9 +60,9 @@
         <li class="nav-item">
           <%= link_to "Forum", "/topics", class: "nav-link" %>
         </li>
-        <li class="nav-item">
+        <%# <li class="nav-item">
           <button type="button" id="master-search" class="btn nav-link">Search</button>
-        </li>
+        </li> %>
 
 
 
