updated footer and comments show page

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -9,7 +9,8 @@
     <a href="#"><i class="fab fa-linkedin"></i></a>
   </div>
   <div class="footer-copyright">
-    made by Kaabo  <i class="fas fa-heart"></i>
+    <div>made by Kaabo  <i class="fas fa-heart"></i></div>
   </div>
+  <div class="mt-2"><span class="translation-container"></span></div>
 </div>
 
