--- a/app/views/themes/show.html.erb
+++ b/app/views/themes/show.html.erb
@@ -1,5 +1,4 @@
-<div class="container .col-xs-">
-  <div class="container">
+  <div class="container .col-xs-">
     <div class="form d-flex">
       <div class="d-flex justify-content-between input-master-search ">
 
@@ -51,7 +50,7 @@
 
 <div id="showthemes">
   <%= render "showlisting" %>
-<div>
+</div>
 
   <div class="container">
     <div class="row">
