--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -63,10 +63,9 @@
   <body>
 
     <%= render 'shared/navbar' %>
-        <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
 
    <div class="main-container">
+   <%= render 'shared/flashes' %>
      <%= yield %>
   </div>
 
